recursion.lessons.recursion.koch.SquareKoch.scala.error
SquareKoch:21: error: not found: value sqareSide
		sqareSide(levels-1,length/3)
                ^